import AppShell from "@/shared/components/app-shell";
import AppTittle from "@/shared/components/app-title";

export default function RegistrarPage() {
	return (
		<AppShell>
			<AppTittle title="Registrar" className="font-semibold" />
		</AppShell>
	);
}

